feat: Add Apothecary Magic Slots compatibility (SCGD)
- Create compatibility module structure (scripts/compatibility/)
- Add scgd-apothecary.js for detecting and normalizing apothecary slots
- Update DnD5eFilterContainer to show apothcary magic in spell slots group
- Add filter matching logic for apothecary preparation mode
- Add CSS variable --dnd5e-filter-apothecary (#285348 deep green)
- Add localization string for Apothecary Magic filter
- Update spell depletion checks to consider apothecary slots
- Update auto-populate documentation to mention apothecary spells

Implements support for Sebastian Crowe's Guide to Drakkenheim
module's apothecary spell slots, similar to pact magic.

--- a/lang/en.json
+++ b/lang/en.json
@@ -99,7 +99,8 @@
       "Cantrip": "Cantrip",
       "SpellLevel": "Spell Level",
       "SpellSlots": "Spell Slots",
-      "PactMagic": "Pact Magic"
+      "PactMagic": "Pact Magic",
+      "ApothecaryMagic": "Apothecary Magic"
     },
     "Info": {
       "Skills": "Skills",
